error in directing register page fixed

--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@
                 </div>
                 <div style="text-align: center;">
                 <button type="submit" class="btn btn-primary">Login</button> <br>
-                Are you a new user? <a href="/templates/register.html">Register</a>
+                Are you a new user? <a href="/ecard-app-mad1/templates/register.html">Register</a>
                </div>
             </div>
         </div>
